--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
+fastapi
+uvicorn
+python-dotenv
+aiohttp
+numpy
+pydantic
 beautifulsoup4
-markdownify
-playwright
-requests
+html2text
+tqdm
+markdown
+python-multipart
+setuptools
